syntax = "proto3";

package kkprotobuf;

option java_package = "com.kanhaiyakumawat.protobuf.generated";
option java_outer_classname = "SumProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;


message SumRequest {
    int64 param1 = 1;
    int64 param2 = 2;
}

message SumResponse {
    int64 sum = 1;
}

service KKProtBufServ {
    rpc getSum(SumRequest)
        returns (SumResponse);
}
